Changed config and package.json file

--- a/config/config.env
+++ b/config/config.env
@@ -1,2 +1,2 @@
 PORT = 3001
-MONGO_URI = "mongodb://dominik-kesim-8394:stockstracker8394@portfolio-tracker-clust-shard-00-00.ctmhe.mongodb.net:27017,portfolio-tracker-clust-shard-00-01.ctmhe.mongodb.net:27017,portfolio-tracker-clust-shard-00-02.ctmhe.mongodb.net:27017/portfolio-tracker?ssl=true&replicaSet=atlas-9fgjd4-shard-0&authSource=admin&retryWrites=true&w=majority"
+MONGO_URI = "mongodb://dominik8394:dominik8394@portfolio-tracker-clust-shard-00-00.ctmhe.mongodb.net:27017,portfolio-tracker-clust-shard-00-01.ctmhe.mongodb.net:27017,portfolio-tracker-clust-shard-00-02.ctmhe.mongodb.net:27017/portfolio-tracker?ssl=true&replicaSet=atlas-9fgjd4-shard-0&authSource=admin&retryWrites=true&w=majority"
