--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "dotenv": "^8.2.0",
         "express": "^4.17.1",
         "express-session": "^1.17.2",
-        "mongoose": "^5.11.15"
+        "mongoose": "^5.11.15",
+        "pug": "^3.0.2"
     },
     "devDependencies": {
         "cross-env": "^7.0.3",
